welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:4: error: not found: value c
  c= max1
  ^max2Value:6: error: not found: value c
  max2 = Math.min(c,max2)
                  ^